dist_man1_MANS=

if BUILD_BITCOINREPUBLICREPUBLICD
  dist_man1_MANS+=bitcoinrepublicd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinrepublic-qt.1
endif

if BUILD_BITCOINREPUBLIC_CLI
  dist_man1_MANS+=bitcoinrepublic-cli.1
endif

if BUILD_BITCOINREPUBLIC_TX
  dist_man1_MANS+=bitcoinrepublic-tx.1
endif

if BUILD_BITCOINREPUBLIC_UTIL
  dist_man1_MANS+=bitcoinrepublic-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINREPUBLIC_WALLET
  dist_man1_MANS+=bitcoinrepublic-wallet.1
endif
endif
